syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "google/protobuf/timestamp.proto";

message Location {
  float latitude = 1;
  float longitude = 2;
}

message CreateHotel {
  string id = 1;
  string title = 2;
  string hotel_slug = 3;
  int64 owner_id = 4;
  string description = 5;
  string address = 6;
  Location location = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Hotel {
  string id = 1;
  string title = 2;
  int64 owner_id = 3;
  string description = 4;
  optional float rating = 5;
  string address = 6;
  Location location = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message HotelShort {
  string id = 1;
  string title = 2;
  string hotel_slug = 3;
  int64 owner_id = 4;
  optional float rating = 5;
  string address = 6;
  Location location = 7;
}

message UpdateHotel {
  string description = 1;
  string address = 2;
  Location location = 3;
}

message UpdateHotelTitle {
  string title = 1;
  string hotel_slug = 2;
}